; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_wql.tab.c_expr_complex.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_wql.tab.c_expr_complex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.parser = type { i32 }
%struct.expr = type { %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { %struct.expr*, i32, %struct.expr* }

@EXPR_COMPLEX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.expr* (%struct.parser*, %struct.expr*, i32, %struct.expr*)* @expr_complex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.expr* @expr_complex(%struct.parser* %0, %struct.expr* %1, i32 %2, %struct.expr* %3) #0 {
  %5 = alloca %struct.parser*, align 8
  %6 = alloca %struct.expr*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.expr*, align 8
  %9 = alloca %struct.expr*, align 8
  store %struct.parser* %0, %struct.parser** %5, align 8
  store %struct.expr* %1, %struct.expr** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.expr* %3, %struct.expr** %8, align 8
  %10 = load %struct.parser*, %struct.parser** %5, align 8
  %11 = call %struct.expr* @alloc_mem(%struct.parser* %10, i32 32)
  store %struct.expr* %11, %struct.expr** %9, align 8
  %12 = load %struct.expr*, %struct.expr** %9, align 8
  %13 = icmp ne %struct.expr* %12, null
  br i1 %13, label %14, label %33

14:                                               ; preds = %4
  %15 = load i32, i32* @EXPR_COMPLEX, align 4
  %16 = load %struct.expr*, %struct.expr** %9, align 8
  %17 = getelementptr inbounds %struct.expr, %struct.expr* %16, i32 0, i32 1
  store i32 %15, i32* %17, align 8
  %18 = load %struct.expr*, %struct.expr** %6, align 8
  %19 = load %struct.expr*, %struct.expr** %9, align 8
  %20 = getelementptr inbounds %struct.expr, %struct.expr* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 2
  store %struct.expr* %18, %struct.expr** %22, align 8
  %23 = load i32, i32* %7, align 4
  %24 = load %struct.expr*, %struct.expr** %9, align 8
  %25 = getelementptr inbounds %struct.expr, %struct.expr* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 1
  store i32 %23, i32* %27, align 8
  %28 = load %struct.expr*, %struct.expr** %8, align 8
  %29 = load %struct.expr*, %struct.expr** %9, align 8
  %30 = getelementptr inbounds %struct.expr, %struct.expr* %29, i32 0, i32 0
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 0
  store %struct.expr* %28, %struct.expr** %32, align 8
  br label %33

33:                                               ; preds = %14, %4
  %34 = load %struct.expr*, %struct.expr** %9, align 8
  ret %struct.expr* %34
}

declare dso_local %struct.expr* @alloc_mem(%struct.parser*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
